# HRI_LAS

./: README.md
HRI/hri_software/: README.txt  install.bash  make_external_libs.bash  update.bash
HRI/hri_software/PetriNetPlans/: README.md
HRI/hri_software/diago_apps/: CMakeLists.txt  README.txt  package.xml
HRI/hri_software/diago_apps/.svn/: wc.db
HRI/hri_software/diago_apps/launch/: diago_movebase.launch  diago_nav.launch
HRI/hri_software/diago_apps/script/: do_follow_person.py  rec_bag.sh  run_joystick.py  run_movebase.py  run_navigation.py  start_demo.py  utils.py
HRI/hri_software/diago_setup/: CMakeLists.txt  README.txt  package.xml
HRI/hri_software/diago_setup/.svn/: wc.db
HRI/hri_software/diago_setup/launch/: diago.launch  diago_freenect.launch  diago_kinect_frames.launch  diago_sim.launch  segway_openni.launch
HRI/hri_software/gradient_based_navigation/: README.md
HRI/hri_software/hri_pnp/: CMakeLists.txt  README.md  package.xml
HRI/hri_software/hri_pnp/launch/: hri_pnpas.launch
HRI/hri_software/hri_pnp/plans/: go_and_follow_person.pnml  go_and_greet_person.pnml  my_plan.pnml  my_plan2.pnml
HRI/hri_software/hri_pnp/scripts/: my_demo.sh  quit_demo.sh  run_demo.sh  run_demo2.sh  run_demo_vision.sh
HRI/hri_software/hri_pnp/src/: Actions.cpp  Conditions.cpp  HRIPNPAS.cpp  HRIPNPAS.h  gest_recog.cpp  main.cpp  topics.h
HRI/hri_software/stage_environments/.svn/: wc.db
HRI/hri_software/stage_environments/cmake/: stageConfig.cmake
HRI/hri_software/stage_environments/maps/: AUTOGEN_DISB1_diago.world  DIS_first_floor.yaml  DIS_first_floor_base.inc  peccioli@Home.yaml  peccioli@Home_base.inc
HRI/hri_software/tcp_interface/: CMakeLists.txt  README.md
HRI/hri_software/tcp_interface/config/: copia di UDPpeers.cfg
HRI/hri_software/tcp_interface/launch/: test.launch  test2.launch  test3.launch
HRI/hri_software/tcp_interface/msg/: RCOMMessage.msg
HRI/hri_software/tcp_interface/src/: CmdServer.cpp  CmdServer.h  TcpClient.cpp  TcpClient.h  TcpClientList.cpp  TcpClientList.h  TcpServer.cpp  TcpServer.h  UDPManager.cpp  UDPManager.h  getIPaddress.cpp  tcpinterface.cpp
HRI/hri_software/tcp_interface/src/gnetwork/: binaryclient.cpp  binaryclient.h  binarymessage.cpp  binarymessage.h  gformatters.h  netclienttest.cpp  netsuppliertest.cpp  network.cpp  network.h  networkedmodule.cpp  networkedmodule.h
HRI/hri_speech/: README.txt  google_interface.py  output_1450270142.flac  output_1450270227.flac  tts.py
HRI/hri_vision/: README
HRI/hri_vision/bgsubtraction_demo/: CMakeLists.txt  README
HRI/hri_vision/bgsubtraction_demo/src/: bgsubtraction_demo_node.cpp
HRI/hri_vision/facedetect/: CMakeLists.txt  README  facedetect.cpp  run.sh
catkin_prove/devel/: .catkin  .rosinstall  setup.sh
catkin_prove/devel/lib/pkgconfig/: prova.pc
catkin_prove/devel/lib/prova/: prova_node
catkin_prove/src/prova/: CMakeLists.txt  package.xml
catkin_prove/src/prova/script/: prova.sh
catkin_prove/src/prova/src/: prova.cpp
catkin_ws/devel/include/glocalizer/: LocalizerRanges.h
catkin_ws/devel/include/laser_analysis/: LaserObstacle.h  LaserObstacleMap.h
catkin_ws/devel/include/pnp_msgs/: Action.h  ActionFinished.h  PNPAction.h  PNPActionFeedback.h  PNPActionGoal.h  PNPActionResult.h  PNPClearBuffer.h  PNPClearBufferRequest.h  PNPClearBufferResponse.h  PNPCondition.h  PNPConditionRequest.h  PNPConditionResponse.h  PNPFeedback.h  PNPGetVariableValue.h  PNPGetVariableValueRequest.h  PNPGetVariableValueResponse.h  PNPGoal.h  PNPLastEvent.h  PNPLastEventRequest.h  PNPLastEventResponse.h  PNPResult.h  PNPReward.h  PNPRewardRequest.h  PNPRewardResponse.h  PNPSetVariableValue.h  PNPSetVariableValueRequest.h  PNPSetVariableValueResponse.h
catkin_ws/devel/include/rococo_navigation/: FollowCorridorAction.h  FollowCorridorActionFeedback.h  FollowCorridorActionGoal.h  FollowCorridorActionResult.h  FollowCorridorFeedback.h  FollowCorridorGoal.h  FollowCorridorResult.h  FollowPersonAction.h  FollowPersonActionFeedback.h  FollowPersonActionGoal.h  FollowPersonActionResult.h  FollowPersonFeedback.h  FollowPersonGoal.h  FollowPersonResult.h  TurnAction.h  TurnActionFeedback.h  TurnActionGoal.h  TurnActionResult.h  TurnFeedback.h  TurnGoal.h  TurnResult.h
catkin_ws/devel/include/tcp_interface/: RCOMMessage.h
catkin_ws/devel/lib/bgsubtraction_demo/: bgsubtraction_demo_node
catkin_ws/devel/lib/glocalizer/: glocalizer_node
catkin_ws/devel/lib/gradient_based_navigation/: gradient_based_navigation  joystick_control  keyboard_control  sendAttractivePoints
catkin_ws/devel/lib/hri_pnp/: gest_recog_node
catkin_ws/devel/lib/laser_analysis/: laserdata  laserobstacle  laserviewer
catkin_ws/devel/lib/pkgconfig/: bgsubtraction_demo.pc  diago_apps.pc  diago_setup.pc  glocalizer.pc  gradient_based_navigation.pc  hri_pnp.pc  laser_analysis.pc  pnp_msgs.pc  pnp_ros.pc  rococo_navigation.pc  stage_environments.pc  tcp_interface.pc
catkin_ws/devel/lib/pnp_ros/: pnp_node
catkin_ws/devel/lib/rococo_navigation/: follow_corridor_node  follow_person_node  gotopose_client  turn_node
catkin_ws/devel/lib/stage_environments/: stageros  stagerosPeople  stageros_experimental
catkin_ws/devel/lib/tcp_interface/: getIPaddress  netclienttest  netsuppliertest  tcp_interface
catkin_ws/src/: bgsubtraction_demo  diago_apps  diago_setup  glocalizer  gradient_based_navigation  hri_pnp  laser_analysis  pnp_msgs  pnp_ros  rococo_navigation  stage_environments  tcp_interface
demos/: grid_localizer.tgz  grid_localizer_2.0.tgz  grid_localizer_3.0.tgz  hmm_rain.py
demos/TTT-RL/: start-3-games.bat  start-3-games.sh
demos/TTT-RL/src/: Player.java  TicTacToe.java
demos/grid_localizer_1/: README.txt
demos/grid_localizer_1/src/: CMakeLists.txt  grid_localizer.cpp  grid_localizer.h  grid_localizer_main.cpp
demos/grid_localizer_2/: CMakeLists.txt  README.txt
demos/grid_localizer_2/src/: CMakeLists.txt  grid_localizer.cpp  grid_localizer.h  grid_localizer_main.cpp
demos/grid_localizer_3/: README.txt
demos/grid_localizer_3/src/: grid_localizer.cpp  grid_localizer.h  grid_localizer_main.cpp
(+168 files in other folders)
