<?xml version="1.0"?>
<package>
  <name>hri_pnp</name>
  <version>0.0.0</version>
  <description>HRI-PNP node.</description>
  
  <maintainer email="iocchi@dis.uniroma1.it">Luca Iocchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>stage_ros</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>stage_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>